--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -29,12 +29,12 @@
         }
     }
     .main-content {
-        padding-top: 100px;
+        padding-top: 115px;
 
         @include max_desktop {
-            padding-top: 80px;
+            padding-top: 90px;
         }
-        @include max_laptop {
+        @include max_tablet{
             padding-top: 0px;
         }
     }
@@ -48,7 +48,13 @@
     }
 }
 .col-page-left {
-    padding: 0 10px 10px 10px;
+    padding: 0 30px 10px 10px;
+    @include max_desktop {
+        padding: 0 20px 10px 10px !important;
+    }
+    @include max_laptop {
+        padding: 0 15px 10px 10px !important;
+    }
     @include max_tablet {
         padding: 10px 0 !important;
     }
